# nova_api_first

./: .replit  borr_except_us.py  cod_x_app.py  code_1_file.py  collection.json  crear_postman.py  db.py  dot_to_dbd.py  manage.py  mfa_tst.sh  model_info.py  modelos.dot  models.md  models.py  myapp_models.dot  new.py  output.dbd  pyproject.toml  pytest.ini  restart.sh  sat_cod_prod.py  schema.yaml  todo_combinado.py  todos_los_modelos_combinados.py
accounts/: admin.py  apps.py  constants.py  filters.py  models.py  permissions.py  schema.py  serializers.py  signals.py  urls.py
attached_assets/: Pasted--Chats-Archived-Django-models-import-error-troubleshooting-5-days-ago-code-line-length-error-fi-1752089140487_1752089140498.txt  Pasted--ContentEncoding-base64-ContentType-xml-ContentLength-5728-Content-PD94bWwgdmVyc2lvbj0i-1753804425484_1753804425495.txt  Pasted--File-home-runner-workspace-pythonlibs-lib-python3-10-site-packages-sentry-sdk-integrations-thre-1752296759435_1752296759436.txt  Pasted--count-3-next-null-previous-null-results--1754089357665_1754089357668.txt  Pasted-AttributeError-at-api-sales-orders-Producto-object-has-no-attribute-stock-Request-Method-PO-1752617552460_1752617552461.txt  Pasted-FieldError-at-api-reportes-flujo-caja-proyectado-Cannot-resolve-keyword-venta-into-field-Choic-1754109744329_1754109744332.txt  Pasted-Hola-necesitamos-que-revises-y-completes-correctamente-el-endpoint-api-reportes-flujo-caja-proy-1754109897231_1754109897232.txt  (+4 more)
cfdi_acuses/: acuse_2688653f-8e12-4088-a0bc-c62b057ab1ee.xml
cfdi_xmls/: cfdi_1.xml  cfdi_1_99wH00y.xml  (+50 more)
(+278 files in other folders)
