[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^5.0"
python = "^3.10"
pip = "^25.1.1"
djangorestframework = "^3.16.0"
djangorestframework-simplejwt = "^5.5.1"
drf-spectacular = "^0.28.0"
pyotp = "^2.9.0"
pytest = "^8.4.1"
sentry-sdk = "^2.33.2"
django-filter = "^25.1"
crypto = "^1.4.1"
lxml = "^6.0.0"
requests = "^2.32.4"
[tool.poetry.dev-dependencies]

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"